adding meta tag for viewport line

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <!-- TODO: add head content below -->
     <meta charset="UTF-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css"></link>
     <title>Nina DeLucia</title>
 </head>
