site matches the mockup given, finished homework assignment

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <section id="contact-me" class="page-section contact">
             <h2>Contact<br>Me</h2>
             <address>
-                <a href="#">555.555.5555</a>
+                <a href="tel:#">555.555.5555</a>
             </address>
             <address>
-                <a href="#">delucianina@website.com</a>
+                <a href="mailto:#">delucianina@website.com</a>
             </address>
             <address>
                 <a href="#">Github</a>
@@ -82,6 +82,10 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>&copy; Copyright 2024</p>
+        <p>Developed by Nina</p>
+    </footer>
 </body>
 
 </html>
